# delphimvcframework

./: .angulardoc.json  .gitignore  .gitmodules  3_0_0_breaking_changes.md  3_1_0_breaking_changes.md  3_2_0_breaking_changes.md  4_0_0_breaking_changes.md  7ziplistfile.txt  CERTIFICATES_TUTORIAL.MD  CHANGES.TXT  CLAUDE.md  COMPATIBILITY_MANTAINERS.MD  CONSOLE_API_MIGRATION_GUIDE.md  CONSOLE_SIMPLIFIED_API.md  DMsgPackHelper.pas  GUIDA_DANIELE.md  LICENSE  LoggerPro.ConsoleAppender.pas  LoggerPro.DBAppender.pas  LoggerPro.DMSEventStreamsAppender.pas  LoggerPro.EMailAppender.pas  LoggerPro.ElasticSearchAppender.pas  LoggerPro.FileAppender.pas  LoggerPro.GlobalLogger.pas  LoggerPro.JSONLFileAppender.pas  LoggerPro.NSQAppender.pas  LoggerPro.OutputDebugStringAppender.pas  LoggerPro.Proxy.pas  LoggerPro.RESTAppender.pas  LoggerPro.RedisAppender.pas  LoggerPro.SimpleConsoleAppender.pas  LoggerPro.UDPSyslogAppender.pas  LoggerPro.VCLListBoxAppender.pas  LoggerPro.VCLMemoAppender.pas  LoggerPro.WindowsEventLogAppender.pas  LoggerPro.pas  LuaDelphiBinding.md  ProjectHome.md  README.md  REFACTORING_CONSOLE_API.md  (+20 more)
.github/: FUNDING.yml
Deploy/: swagger.json
Expert/: DMVC.Expert.CodeGen.NewControllerUnit.pas  DMVC.Expert.CodeGen.NewDMVCProject.pas  DMVC.Expert.CodeGen.NewProject.pas  DMVC.Expert.CodeGen.NewUnit.pas  DMVC.Expert.CodeGen.NewWebModuleUnit.pas  DMVC.Expert.CodeGen.SourceFile.pas  DMVC.Expert.CodeGen.Templates.pas  DMVC.Expert.Forms.NewProjectWizard.dfm  DMVC.Expert.Forms.NewProjectWizard.pas  DMVC.Expert.Forms.NewUnitWizard.dfm  DMVC.Expert.Forms.NewUnitWizard.pas  DMVC.Expert.NewUnitWizard.pas  DMVC.Expert.NewUnitWizardEx.pas  DMVC.Expert.ProjectWizard.pas  DMVC.Expert.ProjectWizardEx.pas  DMVC.Expert.Registration.pas  DMVC.inc  DMVC_IDE_Expert_D10Seattle.dpk  DMVC_IDE_Expert_D10Seattle.dproj  DMVC_IDE_Expert_D10Seattle.dproj.local  DMVC_IDE_Expert_D10Seattle.dres  DMVC_IDE_Expert_D10Seattle.identcache  DMVC_IDE_Expert_D10Seattle.stat  DMVC_IDE_Expert_D10SeattleResource.rc  DUnitX_IDE_Expert_D10Seattle.dres  DUnitX_IDE_Expert_D10Seattle.identcache  DUnitX_IDE_Expert_D10Seattle.stat  DUnitX_IDE_Expert_D10SeattleResource.rc
Source/: Json.Schema.Common.Types.pas  Json.Schema.Field.Objects.pas  Swag.Doc.Definition.pas  Swag.Doc.Path.Operation.RequestParameter.pas  Swag.Doc.Path.Operation.Response.pas  Swag.Doc.Path.Operation.pas  Swag.Doc.SecurityDefinitionApiKey.pas
contrib/: MVCFramework.HTMX.pas  MVCFramework.View.Renderers.Sempare.pas  get-sempare-template-engine.bat  mwAnalytics.pas
docs/: AllFunctions.html  AllIdentifiers.html  AllUnits.html  LoggerPro.ConsoleAppender.html  LoggerPro.GlobalLogger.html  LoggerPro.ILogAppender.html  LoggerPro.OutputDebugStringAppender.html  LoggerPro.VCLAppenders.html  LoggerPro.VCLMemoAppender.TVCLMemoLogAppender.html  changelog.md  delphimvcframework_glow.pdn  dmvc_session_dbactiverecord_firebirdsql.sql  dmvc_session_dbactiverecord_mysql.sql  dmvc_session_dbactiverecord_postgresql.sql  dmvcframework-logo-github-social-repository.pdn  dmvcframework_logofacebook.pdn  dotenv_guide.md  index.html  installation_guide.md  memory_manager_test_01.md  pasdocproject.pds  quickstart_guide.md  rql_guide.md  samples_guide.md  unit_tests.md
ideexpert/: DMVC.Expert.CodeGen.Commands.pas  DMVC.Expert.CodeGen.Executor.pas  DMVC.Expert.CodeGen.NewControllerUnit.pas  DMVC.Expert.CodeGen.NewDMVCProject.pas  (+33 more)
unittests/general/Several/bin32/firebird/examples/: CMakeLists.txt
unittests/general/Several/bin32/firebird/examples/dbcrypt/: CryptApplication.cpp  DbCrypt.cpp  cryptDb.pas
unittests/general/Several/bin32/firebird/examples/interfaces/: 01.create.pas  02.update.cpp  03.select.cpp  07.blob.cpp  08.events.cpp  09.service.cpp
unittests/general/Several/bin32/firebird/examples/udf/: ib_udf.cpp
unittests/general/Several/bin32/firebird/examples/udr/: Procedures.cpp  Triggers.cpp  UdrCppExample.h
(+3953 files in other folders)
